fixed dark mode

--- a/src/components/HeroSection.module.css
+++ b/src/components/HeroSection.module.css
@@ -5,7 +5,6 @@
   text-align: center;
   position: relative;
   overflow: hidden;
-  color: #000000;
 }
 
 @media screen and (max-width: 966px) {
